--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/index.html.twig
@@ -24,15 +24,27 @@ MES PRODUITS
 <a href="{{ path('eproduit_new') }}" class="btn btn-small btn-primary">Ajouter un Produit</a>
 
 <table class="table table-striped table-bordered table-hover">
-    <thead>
-        <tr class="title"> 
-                 <th>Id</th>
-                <th>Name</th>
-                <th>Description</th>
-                 <th>Image</th>
-                 <th colspan="3">Actions</th>
-            </tr>
-        </thead>
+    <table class="table table-striped table-bordered table-hover">
+       <thead>
+        <tr class="title">
+              <th>{{ knp_pagination_sortable(paginationa, 'Id', 'a.id') }}</th>
+    
+ <th{% if paginationa.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Nom', 'a.name') }}</th>
+ <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
+ <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
+{{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
+                   <i class="icon-flag"></i></th> 
+ <th{% if paginationa.isSorted('a.description') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Description', 'a.description') }}</th>
+   <th>Image</th>
+           {% if is_granted("ROLE_ADMIN") %}
+ <th colspan="3"><center>Actions</center></th>
+{% else %}
+ <th><center>Actions</center></th>
+{% endif %}
+        </tr>
+    </thead>
+ 
+  
         <tbody>
         {% for entity in paginationa %}
             <tr>
@@ -40,6 +52,28 @@ MES PRODUITS
                 
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
+                 {% if entity.categorie is not null %}               
+                  <td>{{ entity.categorie.nom }}</td>
+                  {% else %}
+                  <td>---</td>
+                  {% endif %}
+                  <td>
+                                   {% if entity.idStatus is not null %}
+                               {% if entity.idStatus.nom == 'open' %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-souvert.png') }}" alt="show" width="15" height="15" />
+
+ {% else %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
+        {% endif %} 
+ {% else %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
+     
+{% endif %} 
+                                   </td> 
+ 
                 <td>{{ entity.description|raw }}</td>
                        <td>
                 {% if entity.image is not null %}               
@@ -93,7 +127,14 @@ MES PRODUITS
         <tr class="title"> 
                  <th>Id</th>
                 <th>Name</th>
-                <th>Description</th>
+                <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
+                <th{% if paginationa.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Proprietaire', 'b.username') }}</th>
+               <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
+{{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
+                   <i class="icon-flag"></i></th>
+                   
+                   <th>Description</th>
+                
                  <th>Image</th>
                  <th colspan="1">Actions</th>
             </tr>
@@ -105,6 +146,32 @@ MES PRODUITS
                 
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
+                 {% if entity.categorie is not null %}               
+                  <td>{{ entity.categorie.nom }}</td>
+                  {% else %}
+                  <td>---</td>
+                  {% endif %}
+                     {% if entity.proprietaire is not null %}               
+                    <td>{{ entity.proprietaire.username }}</td>
+                 {% else %}
+                  <td>---</td>
+                     {% endif %}
+                    <td>
+                                   {% if entity.idStatus is not null %}
+                               {% if entity.idStatus.nom == 'open' %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-souvert.png') }}" alt="show" width="15" height="15" />
+
+ {% else %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
+        {% endif %} 
+ {% else %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
+     
+{% endif %} 
+                                   </td> 
                 <td>{{ entity.description|raw }}</td>
                        <td>
                 {% if entity.image is not null %}               
