--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/indexmesproduits.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/indexmesproduits.html.twig
@@ -8,7 +8,7 @@
 
 {% block content_header '' %}
 {% block title %}
-PRODUITS DISPONIBLES
+MES PRODUITS 
 {% endblock %}
 {% block content %}
 
@@ -24,18 +24,20 @@ PRODUITS DISPONIBLES
 <a href="{{ path('eproduit_new') }}" class="btn btn-small btn-primary">Ajouter un Produit</a>
 
 <table class="table table-striped table-bordered table-hover">
+    <table class="table table-striped table-bordered table-hover">
        <thead>
         <tr class="title">
               <th>{{ knp_pagination_sortable(paginationa, 'Id', 'a.id') }}</th>
     
  <th{% if paginationa.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Nom', 'a.name') }}</th>
  <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
- <th{% if paginationa.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Proprietaire', 'b.username') }}</th>
-       <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
+ <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
 {{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
                    <i class="icon-flag"></i></th> 
- <th{% if paginationa.isSorted('a.description') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Description', 'a.description') }}</th>
-   <th>Image</th>
+ {#
+<th{% if paginationa.isSorted('a.description') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Description', 'a.description') }}</th>
+#}
+     <th>Image</th>
            {% if is_granted("ROLE_ADMIN") %}
  <th colspan="3"><center>Actions</center></th>
 {% else %}
@@ -44,24 +46,21 @@ PRODUITS DISPONIBLES
         </tr>
     </thead>
  
+  
         <tbody>
         {% for entity in paginationa %}
+             {# {{  entity.description|slice(0, 25) }}
+              {{  entity.description|slice(0, 25)|replace({"\n":"--"})|raw }}#}
             <tr>
                 
                 
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
-                   {% if entity.categorie is not null %}               
+                 {% if entity.categorie is not null %}               
                   <td>{{ entity.categorie.nom }}</td>
                   {% else %}
                   <td>---</td>
                   {% endif %}
-                      {% if entity.proprietaire is not null %}               
-                    <td>{{ entity.proprietaire.username }}</td>
-                 {% else %}
-                  <td>---</td>
-                     {% endif %}
-                     
                   <td>
                                    {% if entity.idStatus is not null %}
                                {% if entity.idStatus.nom == 'open' %}
@@ -79,14 +78,14 @@ PRODUITS DISPONIBLES
 {% endif %} 
                                    </td> 
  
-                                   
- 
-                <td>{{ entity.description|raw }}</td>
+                           {# <td>           {{  entity.description|raw|slice(0, 20)|raw }}</td>#}
+      {#  <td>{{ entity.description|raw|length > 30 ? entity.description|slice(0, 30)|raw  : entity.description|raw  }}</td>
+        #}    {#  <td>{{ entity.description|raw }}</td>#}
                        <td>
                 {% if entity.image is not null %}               
            
          
-         <img width="40px" src="{{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
+         <img width="60px" src="{{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
          {% else %}
            ---
          {% endif %}
@@ -115,7 +114,6 @@ PRODUITS DISPONIBLES
         </tbody>
     </table>
   {{ knp_pagination_render(paginationa) }}
-
 
 
     {% endblock %}
