--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/indexpropositions.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/indexpropositions.html.twig
@@ -8,7 +8,7 @@
 
 {% block content_header '' %}
 {% block title %}
-PRODUITS DISPONIBLES
+PRODUITS PROPOSES
 {% endblock %}
 {% block content %}
 
@@ -21,29 +21,29 @@ PRODUITS DISPONIBLES
     {% endfor %}
 {% endfor %}
 
-<a href="{{ path('eproduit_new') }}" class="btn btn-small btn-primary">Ajouter un Produit</a>
+{#-----------------------------------------------#}
+
+ 
+<br>
+
 
 <table class="table table-striped table-bordered table-hover">
-       <thead>
-        <tr class="title">
-              <th>{{ knp_pagination_sortable(paginationa, 'Id', 'a.id') }}</th>
-    
- <th{% if paginationa.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Nom', 'a.name') }}</th>
- <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
- <th{% if paginationa.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Proprietaire', 'b.username') }}</th>
-       <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
+    <thead>
+        <tr class="title"> 
+                 <th>Id</th>
+                <th>Name</th>
+                <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
+                <th{% if paginationa.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Proprietaire', 'b.username') }}</th>
+               <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
 {{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
-                   <i class="icon-flag"></i></th> 
- <th{% if paginationa.isSorted('a.description') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Description', 'a.description') }}</th>
-   <th>Image</th>
-           {% if is_granted("ROLE_ADMIN") %}
- <th colspan="3"><center>Actions</center></th>
-{% else %}
- <th><center>Actions</center></th>
-{% endif %}
-        </tr>
-    </thead>
- 
+                   <i class="icon-flag"></i></th>
+                   
+                   <th>Description</th>
+                
+                 <th>Image</th>
+                 <th colspan="1">Actions</th>
+            </tr>
+        </thead>
         <tbody>
         {% for entity in paginationa %}
             <tr>
@@ -51,18 +51,17 @@ PRODUITS DISPONIBLES
                 
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
-                   {% if entity.categorie is not null %}               
+                 {% if entity.categorie is not null %}               
                   <td>{{ entity.categorie.nom }}</td>
                   {% else %}
                   <td>---</td>
                   {% endif %}
-                      {% if entity.proprietaire is not null %}               
+                     {% if entity.proprietaire is not null %}               
                     <td>{{ entity.proprietaire.username }}</td>
                  {% else %}
                   <td>---</td>
                      {% endif %}
-                     
-                  <td>
+                    <td>
                                    {% if entity.idStatus is not null %}
                                {% if entity.idStatus.nom == 'open' %}
 
@@ -78,15 +77,12 @@ PRODUITS DISPONIBLES
      
 {% endif %} 
                                    </td> 
- 
-                                   
- 
                 <td>{{ entity.description|raw }}</td>
                        <td>
                 {% if entity.image is not null %}               
            
          
-         <img width="40px" src="{{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
+         <img width="60px" src="{{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
          {% else %}
            ---
          {% endif %}
@@ -98,16 +94,7 @@ PRODUITS DISPONIBLES
                         <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                 </td>
-                <td>
-                    <a href="{{ path('eproduit_edit', { 'id': entity.id }) }}">
-                        <img src="{{ asset('bundles/applicationcertificats/images/edit.png') }}" alt="edit" width="15" height="15" />
-                    </a>
-                </td>
-                   <td>
-     <a href="{{ path('eproduit_delete', { 'id': entity.id }) }}">
-                        <img src="{{ asset('bundles/applicationcertificats/images/delete.png') }}" alt="delete" width="15" height="15" />
-                    </a>
-                </td>
+            
                 
                 
             </tr>
@@ -115,7 +102,4 @@ PRODUITS DISPONIBLES
         </tbody>
     </table>
   {{ knp_pagination_render(paginationa) }}
-
-
-
     {% endblock %}
