--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/new.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/new.html.twig
@@ -40,7 +40,7 @@ Ajouter Un Produit
 <tr><td colspan="3">
                                    
   <button type="submit" class="btn btn-small btn-warning">Modifier</button>
-  <a href="{{ path('eproduit') }}" class="btn btn-small btn-primary">Retour</a>
+   <a href="{{ path(btnretour)  }}" class="btn btn-small btn-success">Retour</a>
    </form>       
                                     
                                        
