--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/show.html.twig
@@ -46,7 +46,14 @@ PRODUIT: {{ entity.name }}
                      {% else %}
                   <td>---</td>
                   {% endif %}
-            </tr>
+                  
+                  <tr>
+            <th>Groupe</th>
+            <td>{{ entity.proprietaire.idgroup }}</td>
+        </tr>
+        
+        
+            
             
             
              <tr>
