--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -163,8 +163,8 @@
                                             <li><a href="{{ path('chronogroup') }}"><i class="icon-plus-sign"></i> {{ 'Groupes'|trans }}</a></li>
                                           <li><a href="{{ path('environnement') }}"><i class="icon-camera"></i> {{ 'Environnements'|trans }}</a></li>
                              <li><a href="{{ path('eproduit_indexadmin') }}"><i class="icon-camera"></i> {{ 'Produits'|trans }}</a></li>
-                             
-                           
+                                 <li><a href="{{ path('users') }}"><i class="icon-camera"></i> {{ 'Utlisateurs-FOSUSER'|trans }}</a></li>                            
+                          
                            
                                           <li><a href="{{ path('applications') }}"><i class="icon-camera"></i> {{ 'Applications'|trans }}</a></li>
 <li><a href="{{ path('projets') }}"><i class="icon-camera"></i> {{ 'Projets'|trans }}</a></li>
