--- a/src/Application/EservicesBundle/Resources/views/Eproduit/show.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/show.html.twig
@@ -57,7 +57,7 @@ PRODUIT: {{ entity.name }}
                   </tr>
                   <tr>
             <th>Groupe</th>
-            <td>{{ entity.proprietaire.idgroup }}</td>
+            <td>{{ entity.proprietaire.idGroup }}</td>
         </tr>
         
         
