--- a/src/Application/EservicesBundle/Resources/views/EserviceGroup/edit.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/EserviceGroup/edit.html.twig
@@ -26,7 +26,7 @@ EDITION GROUPE
          <table class="table table-bordered">
     <tbody>         <tr><td>
                  <div>
-                   {{ form_widget(form) }}
+                   {{ form_widget(edit_form) }}
                 {#     {{ form_row(form.services) }}#}
               </div>
          
