--- a/src/Application/Sonata/UserBundle/Resources/views/User/show.html.twig
+++ b/src/Application/Sonata/UserBundle/Resources/views/User/show.html.twig
@@ -39,6 +39,13 @@ DETAILS UTILISATEUR: {{ entity.username }}
                 <th>Username</th>
                 <td>{{ entity.username }}</td>
             </tr>
+               <th>Groupe</th>
+            {% if entity.idgroup is not null %}
+                <td>{{ entity.idgroup.nomGroup }}</td>
+                {% else %}
+                <td>---</td>
+                {% endif %}
+                <td>
             <tr>
                 <th>Usernamecanonical</th>
                 <td>{{ entity.usernameCanonical }}</td>
