--- a/src/Application/EservicesBundle/Resources/views/Eproduit/index.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/index.html.twig
@@ -36,6 +36,7 @@ MES PRODUITS
                    <i class="icon-flag"></i></th> 
  <th{% if paginationa.isSorted('a.description') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Description', 'a.description') }}</th>
    <th>Image</th>
+    <th>Commentaires</th>
            {% if is_granted("ROLE_ADMIN") %}
  <th colspan="3"><center>Actions</center></th>
 {% else %}
@@ -57,6 +58,7 @@ MES PRODUITS
                   {% else %}
                   <td>---</td>
                   {% endif %}
+                  
                   <td>
                                    {% if entity.idStatus is not null %}
                                {% if entity.idStatus.nom == 'open' %}
@@ -78,12 +80,19 @@ MES PRODUITS
                        <td>
                 {% if entity.image is not null %}               
            
-         
-         <img width="60px" src="{{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
+      {#   {{ app.request.basePath }} {{ vich_uploader_asset(message, 'image') }}#}
+        {#   <img width="60px" src=" {{ app.request.basePath }} {{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
+#}
+    <img width="40px" src="{{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
          {% else %}
            ---
          {% endif %}
            </td>
+            {% if entity.comments is not null %}
+                  <td>{{ entity.comments|length }}</td>
+                  {% else %}
+                  <td>---</td>
+                  {% endif %}
            
                   
                      <td>
@@ -136,6 +145,7 @@ MES PRODUITS
                    <th>Description</th>
                 
                  <th>Image</th>
+                   <th>Commentaires</th>
                  <th colspan="1">Actions</th>
             </tr>
         </thead>
@@ -177,13 +187,17 @@ MES PRODUITS
                 {% if entity.image is not null %}               
            
          
-         <img width="60px" src="{{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
+         <img width="40px" src="{{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
          {% else %}
            ---
          {% endif %}
            </td>
            
-                  
+                    {% if entity.comments is not null %}
+                  <td>{{ entity.comments|length }}</td>
+                  {% else %}
+                  <td>---</td>
+                  {% endif %}
                      <td>
                     <a href="{{ path('eproduit_show', { 'id': entity.id }) }}">
                         <img src="{{ asset('bundles/applicationeservices/images/detail.png') }}" alt="show" width="15" height="15" />
