--- a/src/Application/EservicesBundle/Resources/views/EserviceGroup/show.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/EserviceGroup/show.html.twig
@@ -13,8 +13,11 @@ DETAILS DU GROUPE: {{ entity.nomGroup }}
 {% block content %}
        
 <a href="{{ path('egroup_groupes') }}" class="btn btn-small btn-success">Retour</a>
+ {% if is_granted("ROLE_ADMIN") %}  
+
 <a href="{{ path('egroup_groupes_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a> 
-    
+  {% endif %}
+  
 
   <table class="table table-striped table-bordered table-hover">
         <tbody>
@@ -37,7 +40,7 @@ DETAILS DU GROUPE: {{ entity.nomGroup }}
         </tbody>
     </table>
 
-        <ul class="record_actions">
+      
    
     {#
     <li>
@@ -56,7 +59,8 @@ DETAILS DU GROUPE: {{ entity.nomGroup }}
        <thead>
         <tr class="title"><th>Nom</th><th>Email</th></tr>
   <tbody>
-      </thead>     
+      </thead>    
+     {# <tr><td>{{ entity.users|length }}</td></tr>#}
      {% for myuser in entity.users %}
         <tr>
             <td>{{ myuser.username }}</td>
