--- a/src/Application/EservicesBundle/Resources/views/Eproduit/index.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/index.html.twig
@@ -136,10 +136,10 @@ MES PRODUITS
         <tr class="title"> 
                  <th>Id</th>
                 <th>Name</th>
-                <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
-                <th{% if paginationa.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Proprietaire', 'b.username') }}</th>
-               <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
-{{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
+                <th{% if paginationb.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Categorie', 'c.nom') }}</th>
+                <th{% if paginationb.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Proprietaire', 'b.username') }}</th>
+               <th{% if paginationb.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
+{{ knp_pagination_sortable(paginationb, 'S', 'd.idStatus.nom') }}
                    <i class="icon-flag"></i></th>
                    
                    <th>Description</th>
