--- a/src/Application/EservicesBundle/Resources/views/Eproduit/indexadmin.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/indexadmin.html.twig
@@ -36,6 +36,7 @@ PRODUITS DISPONIBLES
                    <i class="icon-flag"></i></th> 
  <th{% if paginationa.isSorted('a.description') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Description', 'a.description') }}</th>
    <th>Image</th>
+    <th>Commentaires</th>
            {% if is_granted("ROLE_ADMIN") %}
  <th colspan="3"><center>Actions</center></th>
 {% else %}
@@ -92,7 +93,11 @@ PRODUITS DISPONIBLES
          {% endif %}
            </td>
            
-                  
+                {% if entity.comments is not null %}
+                  <td>{{ entity.comments|length }}</td>
+                  {% else %}
+                  <td>---</td>
+                  {% endif %}   
                      <td>
                     <a href="{{ path('eproduit_show', { 'id': entity.id }) }}">
                         <img src="{{ asset('bundles/applicationeservices/images/detail.png') }}" alt="show" width="15" height="15" />
