--- a/src/Application/Sonata/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Application/Sonata/UserBundle/Resources/views/Security/login.html.twig
@@ -85,7 +85,7 @@
     width: 400px;
 }
 body {
-background-image:url(images/ravenna.png);
+background-image:url(images/ravenna1.png);
 }
    
 div.connection div input.big {
