--- a/src/Application/EservicesBundle/Resources/public/css/certificatscenter.css
+++ b/src/Application/EservicesBundle/Resources/public/css/certificatscenter.css
@@ -19,7 +19,7 @@ h1 {
 
 body {
     
-background-image:url("/images/ravenna.png");
+background-image:url("/images/ravenna1.png");
 /*background-image:url("images/nasty_fabric.png");*/
 }
 #footer {
