--- a/src/Application/EservicesBundle/Resources/views/Eproduit/indexpropositions.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/indexpropositions.html.twig
@@ -8,7 +8,7 @@
 
 {% block content_header '' %}
 {% block title %}
-PRODUITS PROPOSES
+PRODUITS DE MON GROUPE
 {% endblock %}
 {% block content %}
 
