--- a/src/Application/ChangementsBundle/Resources/views/Changements/index.html.twig
+++ b/src/Application/ChangementsBundle/Resources/views/Changements/index.html.twig
@@ -37,7 +37,7 @@ Changements
     {% endfor %}
 {% endfor %}
  
- {% if is_granted("ROLE_ADMIN") %}
+ {% if is_granted("ROLE_USER") %}
 <a href="{{ path('changements_newflow') }}" class="btn btn-medium btn-primary"><i class="icon-plus"></i> Ajouter un Changement</a>
 {% endif %}
  <br><br> 
@@ -136,13 +136,15 @@ Changements
                                                     <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="show" width="15" height="15" />
                                                 </a>
                                             </td>
-                                            <td>
+                                          
 
-
+{% if is_granted("ROLE_USER") %}
+                                              <td>
                                                 <a href="{{ path('changements_edit', { 'id': entity.id }) }}">
                                                     <img src="{{ asset('bundles/applicationcertificats/images/edit.png') }}" alt="edit" width="15" height="15" />
                                                 </a>
                                             </td>
+                                            {% endif %}
                                             
                                             <td>
 
