--- a/src/Application/ChangementsBundle/Resources/views/Changements/show.html.twig
+++ b/src/Application/ChangementsBundle/Resources/views/Changements/show.html.twig
@@ -19,7 +19,11 @@
 
 <a href="{{ path('changements') }}" class="btn btn-medium btn-success">Retour</a>
 
+ {% if is_granted("ROLE_USER") %}
 <a href="{{ path('changements_edit', { 'id': entity.id }) }}" class="btn btn-medium btn-warning">Editer</a>
+{% endif %}
+
+
 <br> <br> 
 
 
