--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -4,7 +4,11 @@
 {% set foo = foo|split('_') %}
 {#{{ foo[0] }} #}
 
-            
+    {#        
+  <div class="navbar-inverse navbar-static-top">
+        <div class="navbar-inner">
+        <div class="container">#}
+
 
     <div class="navbar navbar-fixed-top navbar-inverse">
         <div class="navbar-inner">
