--- a/src/Application/ChangementsBundle/Resources/views/Changements/calendar.html.twig
+++ b/src/Application/ChangementsBundle/Resources/views/Changements/calendar.html.twig
@@ -31,7 +31,7 @@ Changements Calendrier
 {{ 'Highlight this sentence'|highlight('i')|raw }}
 {{ 'Highlight this sentence'|highlightme|raw }#}
     <a href="{{ path('changements_newflow') }}" class="btn btn-medium btn-primary">Ajouter Changement</a>
-
+{{ form_widget(form) }}
     <table class="table small table-striped table-condensed table-bordered table-hover">
 
         <thead>
