--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -135,11 +135,16 @@
                                                     <li class="dropdown">
                                     {% endif %}
 
+                                                            
+                                                            
                                                             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-white icon-user"></i>
                                                                 Groupes<b class="caret"></b> </a>
                                                             <ul class="dropdown-menu">
                                                                 <li><a href="{{ path('egroup_groupes') }}"><i class="icon-camera"></i> {{ 'Dashboard Groupes'|trans }}</a></li>
-                                                              
+                                                              {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                                                                     <li><a href="{{ path('egroup_groupes_showmygroup') }}"><i class="icon-camera"></i> {{ 'Mon Groupe'|trans }}</a></li>
+                                                           
+                                                                {% endif %}
 
                                                             </ul>
                                                         </li>
